--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ img {
   padding-right: 16px;
 }
 
-.title-section-portfolio {
+.title-section-collection {
   margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
@@ -22,7 +22,7 @@ img {
   color: var(--navy-blue);
 }
 
-.section-four {
+.collection {
   padding-top: 96px;
   padding-bottom: 96px;
 
@@ -30,37 +30,20 @@ img {
   border-top: none;
 }
 
-.title-section-portfolio {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.1;
-  text-align: center;
-  letter-spacing: 0.02;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
 
-  /* align-items: center; */
-  column-gap: 24px;
-  row-gap: 48px;
-}
-
-.portfolio-box {
+.collection-box {
   
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-img {
+.collection-img {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-box:hover .hover-text {
+.collection-box:hover .hover-text {
   transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -75,16 +58,22 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   padding: 40px 32px;
-  background-color: #4d5ae5;
+  background-color: yellow;
   height: 100%;
   width: 100%;
   transform: translateY(100%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-box:hover {
+.collection-box:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.collection-list {
+  display: flex;
+  flex-wrap: wrap;
+ 
 }
 
 .port-lio-list {
