--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,13 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-
-
+.collection-card{
+  display: flex;
+  flex-wrap: wrap;
+gap: 24px;
+}
 
 .collection-box {
-  
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -70,13 +72,13 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.collection-list {
-  display: flex;
-  flex-wrap: wrap;
- 
-}
+/* .collection-list { */
+/* display: flex; */
+/* flex-wrap: wrap; */
+/*   */
+/* } */
 
-.port-lio-list {
+.collection-list {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -88,7 +90,7 @@ img {
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-title {
+.collection-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
