--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
 /* section 4 */
+ul{
+  list-style: none;
+}
+.collection{
+  margin: 0 auto;
+  padding-top: 96px;
+  padding-bottom: 96px;
+  background-color: black;
+  
+    padding-top: 96px;
+    padding-bottom: 96px;
+  
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
 
 img {
   display: block;
@@ -15,20 +31,20 @@ img {
 .title-section-collection {
   margin-bottom: 72px;
   font-weight: 700;
+  
   font-size: 36px;
   line-height: 111%;
   letter-spacing: 0.02em;
   text-align: center;
-  color: var(--navy-blue);
+  color: white;
 }
 
-.collection {
-  padding-top: 96px;
-  padding-bottom: 96px;
 
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
+
+
+
+
+
 .collection-card{
   display: flex;
   flex-wrap: wrap;
@@ -72,17 +88,18 @@ gap: 24px;
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-/* .collection-list { */
-/* display: flex; */
-/* flex-wrap: wrap; */
-/*   */
-/* } */
+
+
+
+
+
 
 .collection-list {
+  background-color: black;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  gap: 8px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
 
   border: 1px solid #e7e9fc;
   border-top: none;
@@ -95,19 +112,20 @@ gap: 24px;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-top: 32px;
-  margin-left: 16px;
+  color: white;
+  margin-top: 16px;
+  margin-left: 0;
+  text-align: left;
 }
 
 .text {
   text-align: left;
-  margin-top: 8px;
-  margin-left: 16px;
-  margin-bottom: 16px;
+  margin-top:0;
+  margin-left: 0;
+  margin-bottom: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: white;
 }
