--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,38 @@
 /* section 4 */
-ul{
+ul {
   list-style: none;
+  margin: 0;
 }
-.collection{
-  margin: 0 auto;
+p,
+h3 {
+  margin: 0;
+}
+.collection-container {
+  max-width: 320px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-style: none;
+
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.collection {
   padding-top: 96px;
   padding-bottom: 96px;
   background-color: black;
-  
-    padding-top: 96px;
-    padding-bottom: 96px;
-  
-    border: 1px solid #e7e9fc;
-    border-top: none;
 }
-
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-.container {
-  width: 1158px;
-  margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
-}
 
 .title-section-collection {
   margin-bottom: 72px;
   font-weight: 700;
-  
+
   font-size: 36px;
   line-height: 111%;
   letter-spacing: 0.02em;
@@ -39,26 +40,50 @@ img {
   color: white;
 }
 
-
-
-
-
-
-
-.collection-card{
+.collection-card {
   display: flex;
-  flex-wrap: wrap;
-gap: 24px;
+  flex-direction: column;
+  column-gap: 24px;
+  padding: 0;
 }
 
-.collection-box {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .collection-container {
+    max-width: 768px;
+  }
+  .collection-card {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+  }
+  .collection-box {
+    width: calc((100% - 48px) / 2);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
+@media screen and (min-width: 1168px) {
+  .collection-container {
+    max-width: 1200px;
+  }
+  .collection-card {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+  }
+  .collection-box {
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 .collection-img {
   position: relative;
   overflow: hidden;
+  margin: 0;
 }
 
 .collection-box:hover .hover-text {
@@ -76,7 +101,7 @@ gap: 24px;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   padding: 40px 32px;
-  background-color: yellow;
+  background-image: linear-gradient(blue, yellow);
   height: 100%;
   width: 100%;
   transform: translateY(100%);
@@ -88,41 +113,31 @@ gap: 24px;
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-
-
-
-
-
-
 .collection-list {
   background-color: black;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 16px;
-
-  border: 1px solid #e7e9fc;
-  border-top: none;
 
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .collection-title {
+  text-transform: uppercase;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: white;
-  margin-top: 16px;
-  margin-left: 0;
+  padding-top: 20px;
+  padding-bottom: 10px;
+
   text-align: left;
 }
 
 .text {
   text-align: left;
-  margin-top:0;
-  margin-left: 0;
-  margin-bottom: 0;
+  padding-top: 10px;
+  padding-bottom: 20px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
